Try to fix #22033